add app for joining reads (uses flash)

--- a/docs/manual/DBC_amplicons.tex
+++ b/docs/manual/DBC_amplicons.tex
@@ -62,9 +62,14 @@ The increase in sequencing density offers an opportunity to sequence many loci a
 
 \mainmatter
 
-\chapter{Amplicon Primer Design}
+\chapter{Use cases and examples}
+
+\chapter{Amplicon primer design}
 chapter on design
-\chapter{The dbcAmplicons python package}
+
+\chapter{Amplicon generation and sequencing}
+
+\chapter{Analysis, the python dbcAmplicons module}
 the package
 \section{Input Files}
 inputs
